airflow/logs/dag_id=dynamic_metadata_pipeline/run_id=manual__2026-06-03T125711.809031+0000/task_id=run_pipeline_1/attempt=2.log
[2026-06-03T13:02:32.483+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2026-06-03T13:02:32.533+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dynamic_metadata_pipeline.run_pipeline_1 manual__2026-06-03T12:57:11.809031+00:00 [queued]>
[2026-06-03T13:02:32.545+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dynamic_metadata_pipeline.run_pipeline_1 manual__2026-06-03T12:57:11.809031+00:00 [queued]>
[2026-06-03T13:02:32.546+0000] {taskinstance.py:2306} INFO - Starting attempt 2 of 2
[2026-06-03T13:02:32.561+0000] {taskinstance.py:2330} INFO - Executing <Task(BashOperator): run_pipeline_1> on 2026-06-03 12:57:11.809031+00:00
[2026-06-03T13:02:32.567+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'dynamic_metadata_pipeline', 'run_pipeline_1', 'manual__2026-06-03T12:57:11.809031+00:00', '--job-id', '142', '--raw', '--subdir', 'DAGS_FOLDER/dynamic_pipeline_dag.py', '--cfg-path', '/tmp/tmpo1ky2rj3']
[2026-06-03T13:02:32.571+0000] {standard_task_runner.py:91} INFO - Job 142: Subtask run_pipeline_1
[2026-06-03T13:02:32.572+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61 DeprecationWarning: This process (pid=2251) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2026-06-03T13:02:32.574+0000] {standard_task_runner.py:63} INFO - Started process 2262 to run task
[2026-06-03T13:02:32.630+0000] {task_command.py:426} INFO - Running <TaskInstance: dynamic_metadata_pipeline.run_pipeline_1 manual__2026-06-03T12:57:11.809031+00:00 [running]> on host c3bf940c8326
[2026-06-03T13:02:32.742+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='subashri' AIRFLOW_CTX_DAG_ID='dynamic_metadata_pipeline' AIRFLOW_CTX_TASK_ID='run_pipeline_1' AIRFLOW_CTX_EXECUTION_DATE='2026-06-03T12:57:11.809031+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='manual__2026-06-03T12:57:11.809031+00:00'
[2026-06-03T13:02:32.743+0000] {taskinstance.py:430} INFO - ::endgroup::
[2026-06-03T13:02:32.771+0000] {subprocess.py:63} INFO - Tmp dir root location: /tmp
[2026-06-03T13:02:32.773+0000] {subprocess.py:75} INFO - Running command: ['/usr/bin/bash', '-c', 'cd /opt/***/src && python main.py 1']
[2026-06-03T13:02:32.788+0000] {subprocess.py:86} INFO - Output:
[2026-06-03T13:02:44.565+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:02:44.566+0000] {subprocess.py:93} INFO - ===================================
[2026-06-03T13:02:44.567+0000] {subprocess.py:93} INFO - DATABASE CONNECTION CONFIG
[2026-06-03T13:02:44.567+0000] {subprocess.py:93} INFO - ===================================
[2026-06-03T13:02:44.568+0000] {subprocess.py:93} INFO - DB TYPE   : postgres
[2026-06-03T13:02:44.568+0000] {subprocess.py:93} INFO - HOST      : 3.107.8.33
[2026-06-03T13:02:44.569+0000] {subprocess.py:93} INFO - PORT      : 5432
[2026-06-03T13:02:44.569+0000] {subprocess.py:93} INFO - DATABASE  : metadata_db
[2026-06-03T13:02:44.570+0000] {subprocess.py:93} INFO - USERNAME  : teamuser
[2026-06-03T13:02:44.570+0000] {subprocess.py:93} INFO - ===================================
[2026-06-03T13:02:44.570+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:02:44.571+0000] {subprocess.py:93} INFO - Connected to POSTGRES successfully.
[2026-06-03T13:02:44.571+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:02:44.572+0000] {subprocess.py:93} INFO - Running pipeline: postgres_to_s3_pipeline (db_to_storage)
[2026-06-03T13:02:44.572+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:02:44.572+0000] {subprocess.py:93} INFO - ===================================
[2026-06-03T13:02:44.573+0000] {subprocess.py:93} INFO - DATABASE CONNECTION CONFIG
[2026-06-03T13:02:44.573+0000] {subprocess.py:93} INFO - ===================================
[2026-06-03T13:02:44.574+0000] {subprocess.py:93} INFO - DB TYPE   : postgres
[2026-06-03T13:02:44.574+0000] {subprocess.py:93} INFO - HOST      : 3.107.8.33
[2026-06-03T13:02:44.574+0000] {subprocess.py:93} INFO - PORT      : 5432
[2026-06-03T13:02:44.575+0000] {subprocess.py:93} INFO - DATABASE  : udifdb
[2026-06-03T13:02:44.575+0000] {subprocess.py:93} INFO - USERNAME  : teamuser
[2026-06-03T13:02:44.575+0000] {subprocess.py:93} INFO - ===================================
[2026-06-03T13:02:44.576+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:02:44.576+0000] {subprocess.py:93} INFO - Connected to POSTGRES successfully.
[2026-06-03T13:02:44.576+0000] {subprocess.py:93} INFO - Completed: 4653 rows processed
[2026-06-03T13:02:44.577+0000] {subprocess.py:93} INFO - Traceback (most recent call last):
[2026-06-03T13:02:44.577+0000] {subprocess.py:93} INFO -   File "/opt/***/src/main.py", line 72, in main
[2026-06-03T13:02:44.578+0000] {subprocess.py:93} INFO -     log_audit(
[2026-06-03T13:02:44.578+0000] {subprocess.py:93} INFO -   File "/opt/***/src/audit_logger.py", line 55, in log_audit
[2026-06-03T13:02:44.578+0000] {subprocess.py:93} INFO -     cur.execute(
[2026-06-03T13:02:44.579+0000] {subprocess.py:93} INFO - psycopg2.errors.SyntaxError: INSERT has more target columns than expressions
[2026-06-03T13:02:44.579+0000] {subprocess.py:93} INFO - LINE 19:             error_message
[2026-06-03T13:02:44.579+0000] {subprocess.py:93} INFO -                      ^
[2026-06-03T13:02:44.580+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:02:44.580+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:02:44.581+0000] {subprocess.py:93} INFO - During handling of the above exception, another exception occurred:
[2026-06-03T13:02:44.581+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:02:44.581+0000] {subprocess.py:93} INFO - Traceback (most recent call last):
[2026-06-03T13:02:44.582+0000] {subprocess.py:93} INFO -   File "/opt/***/src/main.py", line 111, in <module>
[2026-06-03T13:02:44.582+0000] {subprocess.py:93} INFO -     main()
[2026-06-03T13:02:44.582+0000] {subprocess.py:93} INFO -   File "/opt/***/src/main.py", line 95, in main
[2026-06-03T13:02:44.583+0000] {subprocess.py:93} INFO -     log_audit(
[2026-06-03T13:02:44.583+0000] {subprocess.py:93} INFO -   File "/opt/***/src/audit_logger.py", line 55, in log_audit
[2026-06-03T13:02:44.583+0000] {subprocess.py:93} INFO -     cur.execute(
[2026-06-03T13:02:44.584+0000] {subprocess.py:93} INFO - psycopg2.errors.SyntaxError: INSERT has more target columns than expressions
[2026-06-03T13:02:44.584+0000] {subprocess.py:93} INFO - LINE 19:             error_message
[2026-06-03T13:02:44.584+0000] {subprocess.py:93} INFO -                      ^
[2026-06-03T13:02:44.585+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:02:44.794+0000] {subprocess.py:97} INFO - Command exited with return code 1
[2026-06-03T13:02:44.796+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2026-06-03T13:02:44.805+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/bash.py", line 243, in execute
    raise AirflowException(
airflow.exceptions.AirflowException: Bash command failed. The command returned a non-zero exit code 1.
[2026-06-03T13:02:44.809+0000] {taskinstance.py:1206} INFO - Marking task as FAILED. dag_id=dynamic_metadata_pipeline, task_id=run_pipeline_1, run_id=manual__2026-06-03T12:57:11.809031+00:00, execution_date=20260603T125711, start_date=20260603T130232, end_date=20260603T130244
[2026-06-03T13:02:44.835+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 142 for task run_pipeline_1 (Bash command failed. The command returned a non-zero exit code 1.; 2262)
[2026-06-03T13:02:44.869+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2026-06-03T13:02:44.885+0000] {taskinstance.py:3498} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2026-06-03T13:02:44.889+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
